bigger is better

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: #000;
-  color: #009000;
+  color: #FFF;
   font-family: 'Courier New', Courier, monospace;
   font-size: 2.5pt;
   line-height: 2.5pt;
